@@ -1,10 +1,11 @@
 package com.unicalsocial.backend.user;
 
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -16,34 +17,37 @@ public class UserServiceImpl implements UserService {
     }
 
     @Transactional(readOnly = true)
-    public List<UserDTO> getAllUser() {
-        List<UserEntity> userEntities = userRepository.findAll();
-        List<UserDTO> userDTOS = new ArrayList<>();
-        userEntities.forEach(userEntity -> userDTOS.add(UserMapper.ISTANCE.userToUserDto(userEntity)));
-        return userDTOS;
+    public ResponseEntity<List<UserDTO>> getAllUser() {
+        var users = this.userRepository.findAll();
+        if(users.isEmpty())
+            return ResponseEntity.noContent().build();
+        return ResponseEntity.ok().body(users.stream().map(UserMapper.INSTANCE::userToUserDto).toList());
     }
 
     @Transactional(readOnly = true)
-    public List<UserDTO> getAllUserOrderedBySignUpDate(UserDTO userDTO) {
-        return this.userRepository
-                .findAllByOrderBySignupDateAsc()
-                .stream()
-                .map((UserMapper.ISTANCE::userToUserDto))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<UserDTO>> getAllUserOrderedBySignUpDate() {
+        var users = this.userRepository.findAllByOrderBySignupDateAsc();
+        if(users.isEmpty())
+            return ResponseEntity.noContent().build();
+        return ResponseEntity.ok().body(users.stream().map(UserMapper.INSTANCE::userToUserDto).toList());
     }
 
     @Transactional(readOnly = true)
-    public UserDTO getUserById(int id) {
-        return userRepository.findById(id)
-                .map(UserMapper.ISTANCE::userToUserDto)
-                .orElse(null);
+    public ResponseEntity<UserDTO> getUserById(int id) {
+        var user = this.userRepository.findById(id).orElse(null);
+        if(user == null)
+            return ResponseEntity.notFound().build();
+        return  ResponseEntity.ok().body(UserMapper.INSTANCE.userToUserDto(user));
     }
 
     @Transactional
-    public UserDTO createUser(UserDTO userDTO) {
-        UserEntity user = UserMapper.ISTANCE.userDtoToUser(userDTO);
-        UserEntity userAdded = userRepository.save(user);
-        return UserMapper.ISTANCE.userToUserDto(userAdded);
+    public ResponseEntity<UserDTO> createUser(UserDTO userDTO) {
+        try {
+            var user = this.userRepository.save(UserMapper.INSTANCE.userDtoToUser(userDTO));
+            return new ResponseEntity<>(UserMapper.INSTANCE.userToUserDto(user), HttpStatus.CREATED);
+        }catch (DataIntegrityViolationException exception) {
+            return ResponseEntity.badRequest().build();
+        }
     }
 
 }
