@@ -9,6 +9,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 import static org.mockito.Mockito.*;
@@ -26,44 +27,42 @@ public class UserServiceTest {
 
     @BeforeEach
     public void setUp() {
-        UserEntity userEntity1 = UserEntity.builder()
+        var userEntity1 = UserEntity.builder()
                 .firstName("pippo")
                 .lastName("pippa")
                 .profileName("pippo")
                 .build();
 
-        UserEntity userEntity2 = UserEntity.builder()
+        var userEntity2 = UserEntity.builder()
                 .firstName("pluto")
                 .lastName("pippa")
                 .profileName("pluto")
                 .build();
-        this.user1 = UserMapper.ISTANCE.userToUserDto(userEntity1);
-        this.user2 = UserMapper.ISTANCE.userToUserDto(userEntity2);
+        this.user1 = UserMapper.INSTANCE.userToUserDto(userEntity1);
+        this.user2 = UserMapper.INSTANCE.userToUserDto(userEntity2);
     }
 
     @Test
     public void getAllUser() {
-        when(userRepository.findAll()).thenReturn(List.of(UserMapper.ISTANCE.userDtoToUser(user1), UserMapper.ISTANCE.userDtoToUser(user2)));
-
-        List<UserDTO> users = userService.getAllUser();
-        Assertions.assertEquals(2, users.size());
-        Assertions.assertEquals(user1.getProfileName(), users.get(0).getProfileName());
-        Assertions.assertEquals(user2.getProfileName(), users.get(1).getProfileName());
+        when(userRepository.findAll()).thenReturn(List.of(UserMapper.INSTANCE.userDtoToUser(user1), UserMapper.INSTANCE.userDtoToUser(user2)));
+        var users = userService.getAllUser();
+        Assertions.assertEquals(2, Objects.requireNonNull(users.getBody()).size());
+        Assertions.assertEquals(user1.getProfileName(), users.getBody().getFirst().getProfileName());
+        Assertions.assertEquals(user2.getProfileName(), users.getBody().getLast().getProfileName());
     }
 
     @Test
     public void getUserById() {
-        when(userRepository.findById(1)).thenReturn(Optional.ofNullable(UserMapper.ISTANCE.userDtoToUser(user1)));
-
-        UserDTO user = userService.getUserById(1);
-        Assertions.assertEquals(user1.getProfileName(), user.getProfileName());
+        when(userRepository.findById(1)).thenReturn(Optional.ofNullable(UserMapper.INSTANCE.userDtoToUser(user1)));
+        var user = userService.getUserById(1);
+        Assertions.assertEquals(user1.getProfileName(), Objects.requireNonNull(user.getBody()).getProfileName());
     }
 
     @Test
     public void createUser() {
-        when(userRepository.save(UserMapper.ISTANCE.userDtoToUser(user1))).thenReturn(UserMapper.ISTANCE.userDtoToUser(user1));
-        UserDTO user = userService.createUser(user1);
-        Assertions.assertEquals(user1.getProfileName(), user.getProfileName());
+        when(userRepository.save(UserMapper.INSTANCE.userDtoToUser(user1))).thenReturn(UserMapper.INSTANCE.userDtoToUser(user1));
+        var user = userService.createUser(user1);
+        Assertions.assertEquals(user1.getProfileName(), Objects.requireNonNull(user.getBody()).getProfileName());
     }
 
 }
